--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        return restaura\n",
+    "        return restaurant\n",
+    "    else:\n",
+    "        return alternative\n",
     "    "
    ]
   },
