--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,9 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) < len(alternative['price']):\n",
-    "        return restauran"
+    "        return restaurant\n",
+    "    else:\n",
+    "        return alternative"
    ]
   },
   {
