--- a/index.ipynb
+++ b/index.ipynb
@@ -289,8 +289,9 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open_resta\n",
-    "    for restaurant in restaurants:"
+    "    open_restaurants = []\n",
+    "    for restaurant in restaurants:\n",
+    "        if "
    ]
   },
   {
