--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,8 @@
     "def open_restaurants(restaurants):\n",
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant[is_]"
+    "        if restaurant[is_closed] == False \n",
+    "        "
    ]
   },
   {
