--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
     "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant[is_closed] == False:\n",
-    "            open_restaurants\n",
+    "            open_restaurants.append()\n",
     "        "
    ]
   },
