--- a/index.ipynb
+++ b/index.ipynb
@@ -289,7 +289,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open_restaurants = []\n",
+    "    open_restaur\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant[is_closed] == False:\n",
     "            open_restaurants.append(restaurant)\n",
