--- a/index.ipynb
+++ b/index.ipynb
@@ -291,7 +291,7 @@
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant[is_closed] == False:\n",
-    "            open_restaurants.append(restaurant)\n",
+    "            open_restaurants.append(restaurant\n",
     "        "
    ]
   },
