--- a/index.ipynb
+++ b/index.ipynb
@@ -284,14 +284,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant[is_closed] == False:\n",
-    "            \n",
+    "            restaurant \n",
     "        "
    ]
   },
