--- a/index.ipynb
+++ b/index.ipynb
@@ -289,10 +289,10 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open_\n",
+    "    open_restaurants = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            restaurant \n",
+    "            open_restauranrestaurant \n",
     "        "
    ]
   },
