--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            open_restaurants.append(restaurant)\n",
-    "open\n",
+    "open_restaurants(restaurants)\n",
     "        "
    ]
   },
