--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,8 @@
     "    list = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            list.append()\n",
+    "            list.append(restaurant)\n",
+    "            \n",
     "\n",
     "        "
    ]
